Fix tags wrapping on search results.

--- a/static/sass/custom/_search-results.scss
+++ b/static/sass/custom/_search-results.scss
@@ -14,6 +14,7 @@
     th,
     td {
       flex: 1;
+      flex-wrap: wrap;
 
       &:first-child {
         flex: 0.5;
